k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: myingress
   annotations:
      nginx.ingress.kubernetes.io/add-base-url: "true"
      kubernetes.io/ingress.class: public
spec:
   defaultBackend:
      service:
         name: logger
         port:
            number: 8083
   rules:
       - http:
           paths:
              - pathType: Prefix
                path: "/logger"
                backend:
                   service:
                      name: logger
                      port:
                         number: 8083
              - pathType: Prefix
                path: "/notes"
                backend:
                   service:
                      name: notes
                      port:
                         number: 8081
              - pathType: Prefix
                path: "/user"
                backend:
                   service:
                      name: auth
                      port:
                         number: 8080
              - pathType: Prefix
                path: "/validate"
                backend:
                   service:
                      name: notes
                      port:
                         number: 8081
